latest buildbot crashes when reading older files #59922

Closed
opened 2018-12-28 09:53:40 +01:00 by Sorin Vinatoru · 5 comments

Trying to open mike pan's bmw file (attached) bmw27_gpu.blend will crash the latest 2.80 build.

Tested both from Windows and Linux versions. Windows desktop version, Linux command line.

Backtrace below:

backtrace

/apps/blender/2.80-0661bcba3210/blender(BLI_system_backtrace+0x1d) [0x1b91cad]
/apps/blender/2.80-0661bcba3210/blender() [0x1153ca9]
/lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f175622af20]
/apps/blender/2.80-0661bcba3210/blender(BLI_strnlen+0x7) [0x1b8f457]
/apps/blender/2.80-0661bcba3210/blender(BLI_strncpy+0x16) [0x1b8f496]
/apps/blender/2.80-0661bcba3210/blender() [0x17cacd0]
/apps/blender/2.80-0661bcba3210/blender(blo_do_versions_270+0x2c08) [0x17cd968]
/apps/blender/2.80-0661bcba3210/blender() [0x17acea3]
/apps/blender/2.80-0661bcba3210/blender(blo_read_file_internal+0xa2d) [0x17bfa1d]
/apps/blender/2.80-0661bcba3210/blender(BLO_read_from_file+0x3c) [0x17aa6bc]
/apps/blender/2.80-0661bcba3210/blender(BKE_blendfile_read+0x3e) [0x185148e]
/apps/blender/2.80-0661bcba3210/blender(WM_file_read+0x127) [0x1160e97]
/apps/blender/2.80-0661bcba3210/blender() [0x11519e1]
/apps/blender/2.80-0661bcba3210/blender(BLI_argsParse+0xd5) [0x1b465f5]
/apps/blender/2.80-0661bcba3210/blender(main+0x2c9) [0x10ba2f9]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f175620db97]
/apps/blender/2.80-0661bcba3210/blender(_start+0x2a) [0x115078a]

Trying to open mike pan's bmw file (attached) [bmw27_gpu.blend](https://archive.blender.org/developer/F6095097/bmw27_gpu.blend) will crash the latest 2.80 build. Tested both from Windows and Linux versions. Windows desktop version, Linux command line. Backtrace below: # backtrace /apps/blender/2.80-0661bcba3210/blender(BLI_system_backtrace+0x1d) [0x1b91cad] /apps/blender/2.80-0661bcba3210/blender() [0x1153ca9] /lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f175622af20] /apps/blender/2.80-0661bcba3210/blender(BLI_strnlen+0x7) [0x1b8f457] /apps/blender/2.80-0661bcba3210/blender(BLI_strncpy+0x16) [0x1b8f496] /apps/blender/2.80-0661bcba3210/blender() [0x17cacd0] /apps/blender/2.80-0661bcba3210/blender(blo_do_versions_270+0x2c08) [0x17cd968] /apps/blender/2.80-0661bcba3210/blender() [0x17acea3] /apps/blender/2.80-0661bcba3210/blender(blo_read_file_internal+0xa2d) [0x17bfa1d] /apps/blender/2.80-0661bcba3210/blender(BLO_read_from_file+0x3c) [0x17aa6bc] /apps/blender/2.80-0661bcba3210/blender(BKE_blendfile_read+0x3e) [0x185148e] /apps/blender/2.80-0661bcba3210/blender(WM_file_read+0x127) [0x1160e97] /apps/blender/2.80-0661bcba3210/blender() [0x11519e1] /apps/blender/2.80-0661bcba3210/blender(BLI_argsParse+0xd5) [0x1b465f5] /apps/blender/2.80-0661bcba3210/blender(main+0x2c9) [0x10ba2f9] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f175620db97] /apps/blender/2.80-0661bcba3210/blender(_start+0x2a) [0x115078a]
Author

Added subscriber: @sorinv

Added subscriber: @sorinv
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-12-28 10:09:15 +01:00
Member

I guess this is related to recent 2c196de56b, checking...

I guess this is related to recent 2c196de56b, checking...

This issue was referenced by c07ae0e821

This issue was referenced by c07ae0e821e441b3c3a9b6f192487744c54f4015
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59922
No description provided.